[gd_scene load_steps=7 format=3 uid="uid://dntujjn4adj48"]

[ext_resource type="Script" path="res://UI/Dialogue/dialogue.gd" id="1_72n30"]
[ext_resource type="Texture2D" uid="uid://fmcwkwjoxynq" path="res://_resources/sprites/speakbox.png" id="1_yn57g"]
[ext_resource type="Script" path="res://UI/Dialogue/dialogue_parser.gd" id="2_i4gkg"]
[ext_resource type="Script" path="res://UI/Dialogue/voice.gd" id="2_r44ec"]
[ext_resource type="FontFile" uid="uid://bslxdt1yrwgl8" path="res://_resources/fonts/yoster.ttf" id="4_0e0vd"]
[ext_resource type="AudioStream" uid="uid://dju6xc23ayqyl" path="res://_resources/audio/sfx/Blop-Mark_DiAngelo-79054334-modified.wav" id="4_ly2j0"]

[node name="Dialogue" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_72n30")

[node name="DialogueParser" type="Node2D" parent="."]
script = ExtResource("2_i4gkg")

[node name="Background" type="NinePatchRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
offset_left = 40.0
offset_top = 540.0
offset_right = 1240.0
offset_bottom = 770.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_yn57g")
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
metadata/_edit_use_anchors_ = true
metadata/_edit_group_ = true

[node name="Text" type="RichTextLabel" parent="Background"]
texture_filter = 1
layout_mode = 2
anchor_left = 0.0108333
anchor_top = 0.0434783
anchor_right = 1.0
anchor_bottom = 0.952174
theme_override_fonts/normal_font = ExtResource("4_0e0vd")
theme_override_font_sizes/normal_font_size = 40
bbcode_enabled = true
text = "This is Some Dummy Text, Don't Worry, It'll Change Soon..."
scroll_active = false
text_direction = 1
metadata/_edit_use_anchors_ = true

[node name="TypeTimer" type="Timer" parent="."]
wait_time = 0.05

[node name="PauseTimer" type="Timer" parent="."]
one_shot = true

[node name="Voice" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_ly2j0")
script = ExtResource("2_r44ec")

[connection signal="pause_requested" from="DialogueParser" to="." method="_on_dialogue_parser_pause_requested"]
[connection signal="timeout" from="TypeTimer" to="." method="_on_type_timer_timeout"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_pause_timer_timeout"]
[connection signal="finished" from="Voice" to="." method="_on_voice_finished"]
